--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,16 @@ python:
   - "2.7"
 env:
   - DJANGO=1.5.4 DJANGO_SETTINGS_MODULE="django_cron.test_settings"
+env:
+  - DJANGO=1.5.10
+  - DJANGO=1.6.7
 install:
   - pip install -q Django==$DJANGO --use-mirrors
+  - pip install coveralls
+  - pip install -r test_requirements.pip
 script:
   - python setup.py test
+script:
+  - coverage run --source=django_cron setup.py test
+after_success:
+  - coveralls
