--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: python
 python:
+  - "2.6"
   - "2.7"
 env:
   - DJANGO=1.6.9
   - DJANGO=1.7.2
+matrix:
+  exclude:
+    - python: "2.6"
+      env: DJANGO=1.7
 install:
   - pip install -q Django==$DJANGO --use-mirrors
   - pip install coveralls
