--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,12 @@ python:
   - "2.7"
   - "3.4"
 env:
-  - DJANGO=1.7.7
-  - DJANGO=1.8
+  - DJANGO=1.7.7 DJANGO_SETTINGS_MODULE='settings_sqllite'
+  - DJANGO=1.8 DJANGO_SETTINGS_MODULE='settings_sqllite'
+  - DJANGO=1.7.7 DJANGO_SETTINGS_MODULE='settings_postgres'
+  - DJANGO=1.8 DJANGO_SETTINGS_MODULE='settings_postgres'
+  - DJANGO=1.7.7 DJANGO_SETTINGS_MODULE='settings_mysql'
+  - DJANGO=1.8 DJANGO_SETTINGS_MODULE='settings_mysql'
 addons:
   - postgresql: "9.3"
 install:
