added static code analysis (flake8) fixed detected style issues

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,4 @@ after_success:
 before_script:
   - mysql -e 'create database travis_test;'
   - psql -c 'create database travis_test;' -U postgres
+  - flake8 . --config=flake8
