Add fixes for unit tests
+ URL include fix
+ Test Settings template context processor fix
+ Exclude Python 2.7 / Django 2.0 combination from tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,7 @@ before_script:
   - mysql -e 'create database travis_test;'
   - psql -c 'create database travis_test;' -U postgres
   - flake8 . --config=flake8
+matrix:
+  exclude:
+    - python: "2.7"
+      env: DJANGO=2.0.*
