--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ python:
   - "2.7"
   - "3.4"
 env:
-  - DJANGO=1.11.13 DJANGO_SETTINGS_MODULE='settings_sqllite'
-  - DJANGO=1.11.13 DJANGO_SETTINGS_MODULE='settings_postgres'
-  - DJANGO=1.11.13 DJANGO_SETTINGS_MODULE='settings_mysql'
-  - DJANGO=2.0.6 DJANGO_SETTINGS_MODULE='settings_sqllite'
-  - DJANGO=2.0.6 DJANGO_SETTINGS_MODULE='settings_postgres'
-  - DJANGO=2.0.6 DJANGO_SETTINGS_MODULE='settings_mysql'
+  - DJANGO=1.11.* DJANGO_SETTINGS_MODULE='settings_sqllite'
+  - DJANGO=1.11.* DJANGO_SETTINGS_MODULE='settings_postgres'
+  - DJANGO=1.11.* DJANGO_SETTINGS_MODULE='settings_mysql'
+  - DJANGO=2.0.* DJANGO_SETTINGS_MODULE='settings_sqllite'
+  - DJANGO=2.0.* DJANGO_SETTINGS_MODULE='settings_postgres'
+  - DJANGO=2.0.* DJANGO_SETTINGS_MODULE='settings_mysql'
 addons:
   - postgresql: "9.3"
 install:
@@ -27,4 +27,8 @@ before_script:
 matrix:
   exclude:
     - python: "2.7"
-      env: DJANGO=2.0.*
+      env: DJANGO=2.0.* DJANGO_SETTINGS_MODULE='settings_sqllite'
+    - python: "2.7"
+      env: DJANGO=2.0.* DJANGO_SETTINGS_MODULE='settings_postgres'
+    - python: "2.7"
+      env: DJANGO=2.0.* DJANGO_SETTINGS_MODULE='settings_mysql'
