--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ env:
   - DJANGO=2.0.* DJANGO_SETTINGS_MODULE='settings_sqllite'
   - DJANGO=2.0.* DJANGO_SETTINGS_MODULE='settings_postgres'
   - DJANGO=2.0.* DJANGO_SETTINGS_MODULE='settings_mysql'
+  - DJANGO=3.0.* DJANGO_SETTINGS_MODULE='settings_sqllite'
+  - DJANGO=3.0.* DJANGO_SETTINGS_MODULE='settings_postgres'
+  - DJANGO=3.0.* DJANGO_SETTINGS_MODULE='settings_mysql'
 addons:
   - postgresql: "9.3"
 install:
