--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 dist: bionic
+os: linux
 language: python
 python:
   - "2.7"
@@ -25,7 +26,7 @@ before_script:
   - if [ "$DJANGO_SETTINGS_MODULE" = "settings_mysql" ]; then mysql -e 'create database travis_test;' ; fi
   - if [ "$DJANGO_SETTINGS_MODULE" = "settings_postgres" ]; then psql -c 'create database travis_test;' -U postgres ; fi
   - flake8 . --config=flake8
-matrix:
+jobs:
   exclude:
     - python: "2.7"
       env: DJANGO=2.0.* DJANGO_SETTINGS_MODULE='settings_sqllite'
