--- a/.travis.yml
+++ b/.travis.yml
@@ -4,28 +4,31 @@ language: python
 python:
   - "2.7"
   - "3.7"
+# All the other database configs are run in jobs, and just for Django 3.0/Python 3.7
 env:
   - DJANGO=1.11.* DJANGO_SETTINGS_MODULE='settings_sqllite'
   - DJANGO=2.0.* DJANGO_SETTINGS_MODULE='settings_sqllite'
   - DJANGO=3.0.* DJANGO_SETTINGS_MODULE='settings_sqllite'
-services:
-  - mysql
-  - postgresql
+jobs:
+  include:
+    - python: "3.7"
+      env: DJANGO=3.0.* DJANGO_SETTINGS_MODULE='settings_postgres'
+      services:
+        - postgresql
+      before_script:
+        - psql -c 'create database travis_test;' -U postgres
+    - python: "3.7"
+      env: DJANGO=3.0.* DJANGO_SETTINGS_MODULE='settings_mysql'
+      services:
+        - mysql
+      before_script:
+        - mysql -e 'create database travis_test;'
 install:
   - pip install -q Django==$DJANGO
   - pip install coveralls
   - pip install -r test_requirements.pip
 script:
+  - flake8 . --config=flake8
   - coverage run --source=django_cron setup.py test
 after_success:
   - coveralls
-before_script:
-  - if [ "$DJANGO_SETTINGS_MODULE" = "settings_mysql" ]; then mysql -e 'create database travis_test;' ; fi
-  - if [ "$DJANGO_SETTINGS_MODULE" = "settings_postgres" ]; then psql -c 'create database travis_test;' -U postgres ; fi
-  - flake8 . --config=flake8
-jobs:
-  include:
-    - python: "3.7"
-      env: DJANGO=3.0.* DJANGO_SETTINGS_MODULE='settings_postgres'
-    - python: "3.7"
-      env: DJANGO=3.0.* DJANGO_SETTINGS_MODULE='settings_mysql'
