--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,18 @@ jobs:
   include:
     - python: "2.7"
       env: DJANGO=1.11.* DJANGO_SETTINGS_MODULE='settings_sqllite'
+    - python: "2.7"
+      env: DJANGO=1.11.* DJANGO_SETTINGS_MODULE='settings_postgres'
+      services:
+        - postgresql
+      before_script:
+        - psql -c 'create database travis_test;' -U postgres
+    - python: "2.7"
+      env: DJANGO=1.11.* DJANGO_SETTINGS_MODULE='settings_mysql'
+      services:
+        - mysql
+      before_script:
+        - mysql -e 'create database travis_test;'
     - python: "3.7"
       env: DJANGO=1.11.* DJANGO_SETTINGS_MODULE='settings_sqllite'
     - python: "3.7"
