--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ jobs:
     - python: "3.7"
       env: DJANGO=2.0.* DJANGO_SETTINGS_MODULE='settings_sqllite'
     - python: "3.7"
+      env: DJANGO=3.0.* DJANGO_SETTINGS_MODULE='settings_sqllite'
+    - python: "3.7"
       env: DJANGO=3.0.* DJANGO_SETTINGS_MODULE='settings_postgres'
       services:
         - postgresql
