--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,6 +25,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
+    - name: Install Test Dependencies
+      run: |
+        pip install -r test_requirements.pip
     - name: Run Tests
       run: |
         python runtests.py runtests
